Tue Jan 15 10:40:41 CET 2002 Daniel Veillard <daniel@veillard.com>

	* libxslt/transform.c xsltproc/xsltproc.c: fixed a couple of
	  small problems raised by Justin Fletcher

Mon Jan 14 18:35:18 CET 2002 Daniel Veillard <daniel@veillard.com>

	* configure.in: releasing 1.0.10
	* doc/*: updating the docs for the release.
	* libxslt/namespaces.c libxslt/pattern.c libxslt/transform.c:
	  seems I inadvertantly commited previously stuff from a failed
	  attempt at fixing namespace nodes parents.

Mon Jan 14 12:20:33 CET 2002 Daniel Veillard <daniel@veillard.com>

	* libxslt/numbers.c: the xsl:number implementation incorrectly
	  cached the format string in some case. Fixes bug #65391

Mon Jan 14 10:35:27 CET 2002 Daniel Veillard <daniel@veillard.com>

	* configure.in: fixed a couple of cut and paste errors in the
	  math functions detection
	* libxslt.spec.in: added missing file entry for libxslt.pc

Tue Jan  8 21:04:17 MST 2002 John Fleck <jfleck@inkstain.net>

	* doc/xsltproc.xml, doc/xsltproc.1, doc/xsltproc.html
	update xsltproc man page to add --stringparam option

Tue Jan  8 17:21:02 CET 2002 Daniel Veillard <daniel@veillard.com>

	* xsltproc/xsltproc.c: added the --stringparam option
	* xsltproc/xsltproc.c: applied John Fleck's patch to correct
	  the --novalid behaviour.

Tue Jan  8 13:51:08 CET 2002 Daniel Veillard <daniel@veillard.com>

	* doc/site.xsl doc/*.html: added a DocBook section docbook.html

Tue Jan  8 12:51:15 CET 2002 Daniel Veillard <daniel@veillard.com>

	* doc/*.html: updated gdome2 homepage

Sat Jan  5 19:32:17 CET 2002 Daniel Veillard <daniel@veillard.com>

	* win32/dsp: Windows/MSVC project files update from Igor Zlatkovic

Fri Jan  4 22:13:40 MST 2002 John Fleck <jfleck@inkstain.net>

	* doc/xsltproc.xml, xsltproc.1 - updating man page to reflect
	increased number of parameteres, changed license, cleaned up some
	places where it looked junky because of stylesheet issues

Fri Jan  4 15:50:25 CET 2002 Daniel Veillard <daniel@veillard.com>
