@@ -68,6 +68,7 @@ EXTRA_DIST =	\
 	bug-64.xml \
 	bug-65.xml \
 	bug-66.xml \
+	bug-68.xml \
 	character.xml \
 	array.xml \
 	items.xml
