@@ -1,0 +1,8 @@
+<?xml version="1.0"?>
+<xsl:stylesheet version="1.0"
+xmlns:xsl="http://www.w3.org/1999/XSL/Transform">
+<xsl:output method="html" indent="yes" omit-xml-declaration="yes"/>
+<xsl:template match="/">
+<IMG a=""/>
+</xsl:template>
+</xsl:stylesheet>
