@@ -1,3 +1,10 @@
+Tue Jan 15 12:00:18 CET 2002 Daniel Veillard <daniel@veillard.com>
+
+	* libxslt/templates.c: fixed bug #68751
+	* tests/docs/Makefile.am tests/docs/bug-68.xml
+	  tests/general/Makefile.am tests/general/bug-68.*: added a 
+	  specific example in the regression tests
+	
 Tue Jan 15 10:40:41 CET 2002 Daniel Veillard <daniel@veillard.com>
 
 	* libxslt/transform.c xsltproc/xsltproc.c: fixed a couple of
